[package]
name = "geolocation_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.6"
async-std= "1.12.0"
dotenv = "0.15.0"
serde =  {version = "1.0", features = ["derive"]}
serde_json = "1.0.59"
sha2 = "0.10"
log = { version = "0.4.7", features = ["kv_unstable", "std"] }
reqwest = "0.11.9"
reqwest-middleware = "0.1.5"
reqwest-retry = "0.1.4"
kv-log-macro = "1.0.7"
gethostname = "0.2.2"
fred = "6.3.0"